--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="konten">
     <div id="fotoloveu">
       <div class="image">
-        <!-- Foto Akhir --><img src="0.gif" id="animasi"
+        <!-- Foto Akhir --><img src="akhir.gif" id="animasi"
           width="170px" height="170px" />
       </div>
     </div>
@@ -43,7 +43,7 @@
     var u = 0, penutup; penutup = "After that, you have to give me a lot of attention when you're better ✨🫶🏻";
 
     function play() {//Link Audio Bisa Diganti
-      var audio = new Audio('Take A Chance With Me.mp3'); audio.play();
+      var audio = new Audio('music.mp3'); audio.play();
     }
 
     //Reaksi
