--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     var u = 0, penutup; penutup = "After that, you have to give me a lot of attention when you're better ✨🫶🏻";
 
     function play() {//Link Audio Bisa Diganti
-      var audio = new Audio('music.mp3'); audio.play();
+      var audio = new Audio('tiktok.m4a'); audio.play();
     }
 
     //Reaksi
