--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     //Reaksi
-    async function bukaWa() {window.location = "https://t.me/lyricella"}
+    async function bukaWa() {window.location = "https://www.snapchat.com/add/scappersnail?share_id=mPXajvSAQIi1toMbGnxBIg&locale=id_ID"}
   </script>
 
   <script type="text/javascript">
